src/test/deca/context/invalid/personalTests/FieldProtected.deca
class A{
    protected int a;
}

{
    A a = new A();
    a.a = 10;
}
